# kivy_remote_control

./: MANIFEST  pyproject.toml  setup.py
.github/workflows/: publish.yml
example/: JoystickDemo.py
